# flight-tracker

./: .env  .env.prod  .gitignore  Auth0_And_OAuth2.md  Auth_Approaches_Cli_Programs.md  AuthenticationREADME.md  CLAUDE.md  README.md  env.sh  index.html  package-lock.json  package.json  vite.config.js
.agents/skills/do-work/: CHANGELOG.md  SKILL.md
.agents/skills/do-work/actions/: version.md
.claude/: settings.local.json
.claude/agents/: code-stats.md
backend/: .env  app.py  pyproject.toml  requirements.txt
backend/flight_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: App.css  App.jsx  main.jsx
src/components/: AddNodeModal.css  AddNodeModal.jsx  AuthButton.css  AuthButton.jsx  FlightResults.jsx  FlightSearch.jsx  HamburgerMenu.css  HamburgerMenu.jsx  KanbanCard.css  KanbanCard.jsx  KanbanColumn.css  KanbanColumn.jsx  QANode.css  QANode.jsx  Sidebar.css  Sidebar.jsx  ThemeToggle.css  ThemeToggle.jsx
src/context/: Auth0Context.jsx  ThemeContext.jsx
src/lib/: api_utils.js  auth0.js  auth_utils.js
src/lib/lib/: EventBus.js  our_lib.js  perf_utils.js  url_utils.js  utils.js  wasm_loader.js
src/pages/: AfterLogin.css  AfterLogin.jsx  AfterLogout.css  AfterLogout.jsx  BMICalculator.css  BMICalculator.jsx  CSVViewer.css  CSVViewer.jsx  CoinFlipper.css  CoinFlipper.jsx  HeartRateCalculator.css  HeartRateCalculator.jsx  Home.jsx  KanbanBoard.css  KanbanBoard.jsx  Landing.css  Landing.jsx  MindMap.css  MindMap.jsx  UserInfo.css  UserInfo.jsx
src/services/: mockFlightApi.js  mockMindMapApi.js
