[project]
name = "flight-tracker-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "PyJWT[crypto]==2.11.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
]

[project.scripts]
start_server = "app:main"

[tool.uv]
package = true
